[package]
name = "internet-mon-jaybien"
version = "0.1.0"
edition = "2024"
description = "Windows network reachability overlay for monitoring internet and site availability"
authors = ["Jaybien OJT"]
license = "Proprietary"
build = "build.rs"

[dependencies]
chrono = "0.4"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }
url = "2.5"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

[build-dependencies]
winres = "0.1"
